# kmeansParallel

./: 3DDrawer.ipynb  CMakeLists.txt  IOController.cpp  IOController.hpp  KMeans.cpp  KMeans.hpp  Point.cpp  Point.hpp  main.cpp
